dfir_rs/tests/compile-fail-stable/surface_loop_badlifetime_loop_outside_loop.rs
../compile-fail/surface_loop_badlifetime_loop_outside_loop.rs